# PERIGEE

./: .gitignore
conf/: oguz_macbookpro.cmake  oguz_ubuntu.cmake  stanford_sherlock.cmake  system_lib_loading.cmake
examples/EP-FEA/: CMakeLists.txt  EP_3d_driver.cpp  Pre_postprocess3d.cpp  Pre_postprocess3d_GrownMyo.cpp  activation_times.cpp  compute_ECG.cpp  gmsh_process_3d.cpp  preprocess3d_GrownMyo.cpp  preprocess3d_main.cpp  vis_3DEP.cpp
examples/EP-FEA/include/: ALocal_Elem_Fiber.hpp  Global_Part_METIS_Mixed.hpp  IEN_Mixed.hpp  IonicModel.hpp  IonicModel_AP.hpp  IonicModel_APPurkinje.hpp  IonicModel_Passive.hpp  IonicModel_Purkinje.hpp  IonicModel_TTP.hpp  IonicModel_TTPPurkinje.hpp  Mesh_Mixed.hpp  PDNSolution_EP.hpp  PGAssem_EP.hpp  PNonlinear_Solver_EP.hpp  PTime_Solver_EP_OperatorSplit.hpp  Part_Mixed_Mesh.hpp  Post_error.hpp  Post_tools.hpp  VisDataPrep_3DEP.hpp
examples/EP-FEA/mesh/: 3lines.msh  LV-purkinje.vtu  LV_endnodes-picked.txt  Niederer11.geo  RV-line_endnodes.txt  RV-purkinje.vtu  RV_endnodes-picked copy.txt  RV_endnodes-picked.txt  beam.geo  beam.msh  cube.msh  growth_test.vtu  longline.geo  longline1.msh  longline2.msh  niederer-05mm.msh  niederer-1mm.msh  oneline1.msh  oneline1_grown.msh  oneline2.msh  single_tet.msh  single_tet_grown.msh  tet-and-line.msh  tets_cube.msh  tets_cube_grown.msh  threelines.msh  twolines.msh  twolines1.msh  twolines2.msh  twolines2_grown.msh
examples/EP-FEA/optimize for ecg/: calibrate_for_ecg.py  ecg_digitized.csv  ecg_recording.csv  plot_ecg.py
examples/EP-FEA/optimize_for_ecg/: SU36-V2-1stbeat.csv  SU36-V6-1stbeat.csv  calibrate_for_ecg.py  ecg_digitized.csv  ecg_recording.csv  plot_ecg.py  sherlock_run_script.sh
examples/EP-FEA/src/: AGlobal_Mesh_Info_Mixed.cpp  ALocal_Elem_Fiber.cpp  ALocal_IEN_Mixed.cpp  IEN_Mixed.cpp  IonicModel.cpp  IonicModel_AP.cpp  IonicModel_APPurkinje.cpp  IonicModel_FHN.cpp  IonicModel_Passive.cpp  IonicModel_Purkinje.cpp  IonicModel_TTP.cpp  IonicModel_TTPPurkinje.cpp  IonicModel_Test.cpp  Mesh_Mixed.cpp  PDNSolution_EP.cpp  PGAssem_EP.cpp  PLocAssem_EP_3D.cpp  PNonlinear_Solver_EP.cpp  PTime_Solver_EP_OperatorSplit.cpp  Part_Mixed_Mesh.cpp  Post_tools.cpp  VTK_Writer_EP_3D.cpp  VTK_Writer_EP_Mixed.cpp  VisDataPrep_3DEP.cpp
examples/EP-IGA/: Pre_postprocess2d.cpp  preprocess3d_main.cpp  vis_3DEP.cpp
examples/EP-IGA/include/: IonicModel_AP.hpp  PLocAssem_EP_3D.hpp
examples/EP-IGA/src/: VisDataPrep_3DEP.cpp
examples/electrophysiology/: preprocess2d_main.cpp
examples/electrophysiology/include/: PDNSolution_EP.hpp  PGAssem_EP.hpp  PTime_Solver_EP_OperatorSplit.hpp  VisDataPrep_3DEP.hpp
examples/electrophysiology/src/: IonicModel_Test.cpp  PNonlinear_Solver_EP.cpp  PTime_Solver_EP_OperatorSplit.cpp
examples/electrophysiology_2d/: CMakeLists.txt  EP_2d_driver.cpp  EP_3d_driver.cpp  Pre_postprocess2d.cpp  Pre_postprocess3d.cpp  beam3d.txt  heat_2d_genAlpha.cpp  heat_3d_genAlpha.cpp  post_compare_manu_2d.cpp  preprocess2d_main.cpp  preprocess3d_main.cpp  vis_2DEP.cpp  vis_2DNLHeat.cpp  vis_3DEP.cpp  vis_3DNLHeat.cpp
examples/electrophysiology_2d/include/: IonicModel.hpp  IonicModel_AP.hpp  IonicModel_AlievPanfilov.hpp  IonicModel_Test.hpp  IonicModel_fhn.hpp  PDNSolution_EP.hpp  PGAssem_EP.hpp  PGAssem_NLHeat_GenAlpha.hpp  PLocAssem_EP_2D.hpp  PLocAssem_EP_3D.hpp  PLocAssem_NLHeat_2D_GenAlpha.hpp  PLocAssem_NLHeat_3D_GenAlpha.hpp  PNonlinear_Solver_EP.hpp  PTime_Solver_EP_OperatorSplit.hpp  VisDataPrep_2DEP.hpp  VisDataPrep_3DEP.hpp
examples/electrophysiology_2d/src/: IonicModel.cpp  IonicModel_AP.cpp  IonicModel_FHN.cpp  IonicModel_Test.cpp  IonicModel_fhn_be.cpp  IonicModel_test.cpp  PDNSolution_EP.cpp  PDNSolution_heatEqn.cpp  PGAssem_EP.cpp  PGAssem_NLHeat_GenAlpha.cpp  PLocAssem_EP_2D.cpp  PLocAssem_EP_3D.cpp  PLocAssem_NLHeat_2D_GenAlpha.cpp  PLocAssem_NLHeat_3D_GenAlpha.cpp  PNonlinear_Solver_EP.cpp  PNonlinear_Solver_NLHeat_GenAlpha.cpp  PTime_Solver_EP_OperatorSplit.cpp  PTime_Solver_NLHeat_GenAlpha.cpp  VisDataPrep_2DEP.cpp
examples/electrophysiology_tet/: CMakeLists.txt  EP_3d_driver.cpp  EP_3d_driver_HLHS.cpp  Pre_postprocess3d.cpp  Pre_postprocess3d_HLHS.cpp  gmsh_process_3d.cpp  post_compare_manu_2d.cpp  post_compare_manu_3d.cpp  preprocess3d_HLHS.cpp  preprocess3d_Pur (copy).cpp  preprocess3d_Pur.cpp  preprocess3d_main.cpp  vis_3DEP.cpp  vis_3DEP_HLHS.cpp  vis_3DEP_pur.cpp
examples/electrophysiology_tet/include/: AGlobal_Mesh_Info_Mixed.hpp  ALocal_IEN_Mixed.hpp  Global_Part_METIS_Mixed.hpp  IEN_Mixed.hpp  IonicModel.hpp  IonicModel_FHN.hpp  IonicModel_Purkinje.hpp  Mesh_Mixed.hpp  PGAssem_EP.hpp  PLocAssem_EP_2D.hpp  PLocAssem_EP_3D.hpp  PNonlinear_Solver_EP.hpp  PTime_Solver_EP_OperatorSplit.hpp  Part_Mixed_Mesh.hpp  VTK_Writer_EP_3D.hpp  VTK_Writer_EP_Mixed.hpp  VisDataPrep_2DEP.hpp
examples/electrophysiology_tet/mesh/: HLHS-coarse.msh  LV-line.vtu  LV-line_endnodes-og.txt  LV-line_endnodes.txt  RV-line.vtu  beam.msh  oneline.msh  single_tet.geo  single_tet.msh  sphere-line.vtu  square.msh  tet-and-line.msh  threelines.msh  twolines.msh
examples/nonlinear_heat_eqn/: preprocess2d_main.cpp
examples/ns/: vis_p1_wss.cpp  vis_p2_wss.cpp
include/: ALocal_Elem.hpp  BoundaryCond.hpp  ElemBC_3D_Line.hpp  FEAElement.hpp  FEAElement_Line2_3D_der1.hpp  Global_Part_METIS.hpp  Gmsh_FileIO.hpp  HDF5_Reader.hpp  IAGlobal_Mesh_Info.hpp  IEN_Line_P1.hpp  IIEN.hpp  IMesh.hpp  IPLocAssem.hpp  IPart.hpp  Mesh_Line_3D.hpp  NodalBC_Line_3D_stimulus.hpp  NodalBC_Line_3D_vtp.hpp  PLinear_Solver_PETSc.hpp  Part_Line.hpp  Tet_Tools.hpp  Vec_Tools.hpp  Vis_Tools.hpp
src/Analysis_Tool/: ALocal_EBC_wIntPts.cpp  APart_Node.cpp
src/Element/: FEAElement_Line2_3D_der1.cpp  FEANode.cpp
src/Mesh/: BoundaryCond.cpp  ElemBC_3D_Line.cpp  Global_Part_METIS.cpp  Gmsh_FileIO.cpp  IEN_Line_P1.cpp  Mesh_Line_3D.cpp  NodalBC_Line_3D_stimulus.cpp  NodalBC_Line_3D_vtp.cpp  Part_Line.cpp  Tet_Tools.cpp
src/Postproc_Tool/: Vis_Tools.cpp
src/Solver/: PLinear_Solver_PETSc.cpp  PNonlinear_Solver.cpp
src/System/: HDF5_Writer.cpp
tools/sv_file_converter/: CMakeLists.txt
(+22 files in other folders)
